@@ -21,12 +21,10 @@ else
 endif
 
 if read1($00A2EA) == $5C && read4(read3($00A2EA+1)-4) == $4D6E6976
-
 org $00A2EA
     pla
     sta $1D
     pla
-
 endif
 
 org $05D842
@@ -148,4 +146,9 @@ org $05B31B
 endif
 
 org $009856
-    lda #$20 : sta $44
+    lda #$20
+    sta $44
+
+org $00D0D8
+    dec $0DBE|!addr
+    bpl $09
