@@ -1,5 +1,6 @@
 v0.7.3:
     - Added !8x8_item_box_tile option to have an 8x8 tile instead of a 16x16 tile for the sprite status bar item box (thanks to AmperSam for the gfx).
+    - Fixed game crash if patching the infinite lives hex edit after inserting Retry.
 
 v0.7.2:
     - Updated "library/retry.asm" and "gamemode/retry_gm14.asm" files, which I forgot to update in 0.7.1 so that version gave compilation errors.
